--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Color Game</title>
 </head>
 <body>
-    <header>
+    <header class="change">
         <div class="container">
             <div class="title">Color Game</div>
             <div class="rgb">
@@ -29,12 +29,12 @@
     </section>
     <section class="colors">
         <div class="container display-none">
-            <div class="color color-1"></div>
-            <div class="color color-2"></div>
-            <div class="color color-3"></div>
-            <div class="color color-4"></div>
-            <div class="color color-5"></div>
-            <div class="color color-6"></div>
+            <div class="color change" data-index="0"></div>
+            <div class="color change" data-index="1"></div>
+            <div class="color change" data-index="2"></div>
+            <div class="color change" data-index="3"></div>
+            <div class="color change" data-index="4"></div>
+            <div class="color change" data-index="5"></div>
         </div>
     </section>
 
